<resources>
    <string name="app_name">ShopKeeper</string>

    <!-- General Strings -->
    <string name="save">Save</string>

    <!-- Activities/Fragments Name -->
    <string name="customer_info_activity">Receipt</string>
    <string name="customer_list">Customers Details</string>
    <string name="product_info_activity">Product Info</string>

    <!-- Customer Info Fragment -->
    <string name="customer_name_title">Customer Name</string>
    <string name="product_title">Product</string>
    <string name="sale_price_title">Sale Price</string>
    <string name="mobile_number_title">Mobile Number</string>
    <string name="customer_info_text">Customer Info</string>
    <string name="product_info_text">Product Info</string>

    <!-- Product Info Fragment -->
    <string name="product_name_title">Product Name</string>
    <string name="product_id_title">Serial Number</string>
    <string name="product_stock_title">Amount in Stock</string>
    <string name="product_price_title">Price</string>
    <string name="product_info_title">Product</string>
    <string name="product_market_title">Stock Details</string>

    <!-- Product List Fragment -->
    <string name="amount_in_stock">Amount in Stock: </string>

    <!-- Customer List Fragment -->
    <string name="product_purchased">Product Purchased: </string>

    <!-- Navigation Bar Strings -->
    <string name="customers_list">Customers List</string>
    <string name="products_list">Products List</string>
    <string name="home_nav">Home</string>
    <string name="sections_nav">Sections</string>
    <string name="tools_nav">Tools</string>
    <string name="backup_restore_nav">Backup &amp; Restore</string>

    <!-- Customer Info Fragment -->
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="select_spinner_item_text">Select Item</string>

    <!-- Backup & Restore Fragment -->
    <string name="local_backup_restore_heading">Local Backup</string>
    <string name="online_backup_restore_heading">Online Backup</string>
    <string name="backup_text">Backup!</string>
    <string name="restore_text">Restore!</string>

</resources>
