<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".HostingActivities.CustomerInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:elevation="2dp"
                style="@style/segment_background_backup_frag">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/local_backup_restore_heading"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/backup_text"
                    android:id="@+id/local_backup_button"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/local_restore_button"
                    android:text="@string/restore_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:elevation="2dp"
                style="@style/segment_background_backup_frag">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/online_backup_restore_heading"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/backup_text"
                    android:id="@+id/online_backup_button"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/online_restore_button"
                    android:text="@string/restore_text"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
